--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_app
-	base = af622441
-	trimbase = 
+	base = ae164ce2
+	trimbase = af622441
 	parent = upstream
 	previous = 6f343506
