--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_py_common
-	base = 03acab5c
-	trimbase = 
+	base = 53bab92f
+	trimbase = 03acab5c
 	parent = upstream
 	previous = 6f343506
