--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_cpp
-	base = c3101b4e
-	trimbase = 
+	base = 5045b55e
+	trimbase = c3101b4e
 	parent = upstream
 	previous = 6f343506
