--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_dotgraph
-	base = d1bcd1be
-	trimbase = 
+	base = db8a737b
+	trimbase = d1bcd1be
 	parent = upstream
 	previous = 6f343506
