--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_core
-	base = 75aa398f
-	trimbase = 
+	base = ceb4b492
+	trimbase = 75aa398f
 	parent = upstream
 	previous = 6f343506
