--- a/qt_dotgraph/package.xml
+++ b/qt_dotgraph/package.xml
@@ -1,10 +1,9 @@
-<package>
+<package format="3">
   <name>qt_dotgraph</name>
-  <version>0.3.11</version>
+  <version>0.3.17</version>
   <description>
     qt_dotgraph provides helpers to work with dot graphs.
   </description>
-  <maintainer email="dhood@osrfoundation.org">D. Hood</maintainer>
   <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <license>BSD</license>
 
@@ -15,8 +14,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>python-pydot</run_depend>
-  <run_depend version_gte="0.3.0">python_qt_binding</run_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pydot</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pydot</exec_depend>
+  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>
 
-  <test_depend>python-pygraphviz</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-pygraphviz</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-pygraphviz</test_depend>
 </package>
