--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_dotgraph
-	base = 2511f58e
-	trimbase = 
+	base = 1e2426a0
+	trimbase = 2511f58e
 	parent = upstream
 	previous = b7690c1d
