--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_core
-	base = 0509003e
-	trimbase = 
+	base = 5045b83d
+	trimbase = 0509003e
 	parent = upstream
 	previous = b7690c1d
