--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_py_common
-	base = 4eaf6bbf
-	trimbase = 
+	base = 6484dc06
+	trimbase = 4eaf6bbf
 	parent = upstream
 	previous = b7690c1d
