--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui
-	base = 4ece88ea
-	trimbase = 
+	base = 447d2afd
+	trimbase = 4ece88ea
 	parent = upstream
 	previous = b7690c1d
