--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_app
-	base = d05774bc
-	trimbase = 
+	base = 3808cf81
+	trimbase = d05774bc
 	parent = upstream
 	previous = b7690c1d
