--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_cpp
-	base = 3ef32fcd
-	trimbase = 
+	base = 6b9949a2
+	trimbase = 3ef32fcd
 	parent = upstream
 	previous = b7690c1d
