--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,9 @@
-<package>
+<package format="3">
   <name>qt_gui_py_common</name>
-  <version>0.3.11</version>
+  <version>0.3.17</version>
   <description>
     qt_gui_py_common provides common functionality for GUI plugins written in Python.
   </description>
-  <maintainer email="dhood@osrfoundation.org">D. Hood</maintainer>
   <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
   <license>BSD</license>
 
@@ -15,6 +14,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend version_gte="0.3.0">python_qt_binding</run_depend>
-  <run_depend>python-rospkg</run_depend>
+  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
 </package>
