--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_dotgraph
-	base = 69c56699
-	trimbase = 
+	base = 82599ba1
+	trimbase = 69c56699
 	parent = upstream
 	previous = 841caccd
