--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_core
-	base = 1c8c4d40
-	trimbase = 
+	base = a0ce3e4f
+	trimbase = 1c8c4d40
 	parent = upstream
 	previous = 841caccd
