--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_py_common
-	base = 5dce1a78
-	trimbase = 
+	base = 878960ac
+	trimbase = 5dce1a78
 	parent = upstream
 	previous = 841caccd
