--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui
-	base = 96cf6273
-	trimbase = 
+	base = 01f6d54b
+	trimbase = 96cf6273
 	parent = upstream
 	previous = 841caccd
