--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_app
-	base = 50da1a28
-	trimbase = 
+	base = 87913792
+	trimbase = 50da1a28
 	parent = upstream
 	previous = 841caccd
