--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = qt_gui_cpp
-	base = e2864ca1
-	trimbase = 
+	base = 57ee15a7
+	trimbase = e2864ca1
 	parent = upstream
 	previous = 841caccd
