--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 841caccd
-	base = 5a00900d
-	trim = 
-	trimbase = 
+	base = fd5b8555
+	trim = qt_dotgraph
+	trimbase = 5a00900d
