--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 841caccd
-	base = b31d67f0
-	trim = 
-	trimbase = 
+	base = 3018e56a
+	trim = qt_gui_core
+	trimbase = b31d67f0
