--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 841caccd
-	base = 51ffc077
-	trim = 
-	trimbase = 
+	base = fbc8a5be
+	trim = qt_gui_py_common
+	trimbase = 51ffc077
