--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 841caccd
-	base = 731095ca
-	trim = 
-	trimbase = 
+	base = 26f348e2
+	trim = qt_gui
+	trimbase = 731095ca
