--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 841caccd
-	base = 0f8612d1
-	trim = 
-	trimbase = 
+	base = 204a2514
+	trim = qt_gui_app
+	trimbase = 0f8612d1
