--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 841caccd
-	base = 781ca617
-	trim = 
-	trimbase = 
+	base = ef6f45cc
+	trim = qt_gui_cpp
+	trimbase = 781ca617
