--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/qt_gui_cpp
-	previous = 
-	base = ef6f45cc
+	previous = ef6f45cc
+	base = 4ada9e23
 	trim = 
 	trimbase = 
