--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_cpp
-	previous = 
-	base = c6a8ca20
+	previous = c6a8ca20
+	base = f964b924
 	trim = 
 	trimbase = 
