--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/qt_gui_py_common
-	previous = 
-	base = fbc8a5be
+	previous = fbc8a5be
+	base = bd253a05
 	trim = 
 	trimbase = 
