--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_py_common
-	previous = 
-	base = 17fc2ac7
+	previous = 17fc2ac7
+	base = 00554f2c
 	trim = 
 	trimbase = 
