--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/qt_gui
-	previous = 
-	base = 26f348e2
+	previous = 26f348e2
+	base = b90ba043
 	trim = 
 	trimbase = 
