--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui
-	previous = 
-	base = b7b53c55
+	previous = b7b53c55
+	base = 822dcee7
 	trim = 
 	trimbase = 
