--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/qt_gui_core
-	previous = 
-	base = 3018e56a
+	previous = 3018e56a
+	base = 6de6383a
 	trim = 
 	trimbase = 
