--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_core
-	previous = 
-	base = 90b9c0fd
+	previous = 90b9c0fd
+	base = 3576fe34
 	trim = 
 	trimbase = 
