--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/qt_dotgraph
-	previous = 
-	base = fd5b8555
+	previous = fd5b8555
+	base = 42acb623
 	trim = 
 	trimbase = 
