--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_dotgraph
-	previous = 
-	base = 2f5fe4d7
+	previous = 2f5fe4d7
+	base = 4e1ded69
 	trim = 
 	trimbase = 
