--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/qt_gui_app
-	previous = 
-	base = 204a2514
+	previous = 204a2514
+	base = a2397dbc
 	trim = 
 	trimbase = 
