--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_app
-	previous = 
-	base = b24f481d
+	previous = b24f481d
+	base = 0e46c9a1
 	trim = 
 	trimbase = 
