--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_core
-	previous = 
-	base = 4b93df05
+	previous = 4b93df05
+	base = c99a6736
 	trim = 
 	trimbase = 
