--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_py_common
-	previous = 
-	base = c37772c6
+	previous = c37772c6
+	base = 5f0dad45
 	trim = 
 	trimbase = 
