--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_app
-	previous = 
-	base = 0beb864c
+	previous = 0beb864c
+	base = 3a7460be
 	trim = 
 	trimbase = 
