--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui
-	previous = 
-	base = 0094978b
+	previous = 0094978b
+	base = ede306ce
 	trim = 
 	trimbase = 
