--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_gui_cpp
-	previous = 
-	base = bae20d2e
+	previous = bae20d2e
+	base = 3cbd8b34
 	trim = 
 	trimbase = 
