--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/qt_dotgraph
-	previous = 
-	base = 20aba39a
+	previous = 20aba39a
+	base = 8a8daf05
 	trim = 
 	trimbase = 
