--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/qt_gui_app
-	previous = 
-	base = 087ea6d2
+	previous = 087ea6d2
+	base = dfd9a78c
 	trim = 
 	trimbase = 
