--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/qt_dotgraph
-	previous = 
-	base = 3c9d4c0c
+	previous = 3c9d4c0c
+	base = 6f09de93
 	trim = 
 	trimbase = 
