--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/qt_gui_core
-	previous = 
-	base = c648511f
+	previous = c648511f
+	base = cfe19d0e
 	trim = 
 	trimbase = 
