--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/qt_gui_py_common
-	previous = 
-	base = 795bc14b
+	previous = 795bc14b
+	base = 61217afe
 	trim = 
 	trimbase = 
