--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/qt_gui_cpp
-	previous = 
-	base = 7b263b00
+	previous = 7b263b00
+	base = 48a2cbe3
 	trim = 
 	trimbase = 
