--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/qt_gui
-	previous = 
-	base = a2cd471e
+	previous = a2cd471e
+	base = 7b9c3297
 	trim = 
 	trimbase = 
