--- a/tracks.yaml
+++ b/tracks.yaml
@@ -1,4 +1,4 @@
-release_repo_url: git@github.com:ros-gbp/qt_gui_core-release
+release_repo_url: git@github.com:ros-gbp/qt_gui_core-release.git
 tracks:
   groovy:
     actions:
@@ -96,7 +96,9 @@ tracks:
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
-      :{release_inc}
+      :{release_inc} --os-name fedora
+    - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
+      :{release_inc} --os-name rhel
     devel_branch: kinetic-devel
     last_version: 0.3.17
     name: upstream
